licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

######### CONFIG SETTINGS #########

config_setting(
    name = "windows",
    values = {"cpu": "x64_windows"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    values = {
        "apple_platform_type": "macos",
        "cpu": "darwin",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ios",
    values = {"apple_platform_type": "ios"},
    visibility = ["//visibility:public"],
)

######### GENERAL SOURCE #########

filegroup(
    name = "srcs",
    srcs = [
        "//cfg:srcs",
        "//dbg:srcs",
        "//egen:srcs",
        "//eigen:srcs",
        "//extenncor:srcs",
        "//gen:srcs",
        "//marsh:srcs",
        "//onnx:srcs",
        "//opt:srcs",
        "//pyutils:srcs",
        "//query:srcs",
        "//teq:srcs",
        "//tenncor:srcs",
        "BUILD.bazel",
    ],
)

filegroup(
    name = "test_models",
    srcs = glob([
        "models/test/*.onnx",
        "models/test/*.txt",
        "models/test/*.json",
    ])
)

filegroup(
    name = "models",
    srcs = glob([
        "models/*.onnx",
        "models/*.json",
        "models/data/*",
    ])
)
