licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

######### CONFIG SETTINGS #########

config_setting(
    name = "windows",
    values = {"cpu": "x64_windows"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    values = {
        "apple_platform_type": "macos",
        "cpu": "darwin",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "ios",
    values = {"apple_platform_type": "ios"},
    visibility = ["//visibility:public"],
)

######### GENERAL SOURCE #########

filegroup(
    name = "srcs",
    srcs = [
        "//cfg:srcs",
        "//dbg:srcs",
        "//extenncor:srcs",
        "//internal:srcs",
        "//tenncor:srcs",
        "//tools:srcs",
        "BUILD.bazel",
    ],
)

filegroup(
    name = "test_models",
    srcs = glob([
        "models/test/*.onnx",
        "models/test/*.txt",
        "models/test/*.json",
        "models/test/**/*.json",
    ]),
)

filegroup(
    name = "models",
    srcs = glob([
        "models/*.onnx",
        "models/*.json",
        "models/data/*",
    ]),
)

######### PYTHON PACKAGE #########

py_binary(
    name = "setup",
    srcs = ["setup.py"],
    deps = ["//tenncor:tenncor_py"],
    data = ["README.md"],
)

######### DEVELOPER TOOLS ########

load("@com_grail_bazel_compdb//:aspects.bzl", "compilation_database")
compilation_database(
    name = "compdb",
    targets = [
        "//internal/utils:utils",
        "//tenncor:tenncor",
    ],
)
